Update Hojas de Estilo, excepto formularios y admin

--- a/myProyectoPaginaWeb/miPaginaweb/static/css/index_xs.css
+++ b/myProyectoPaginaWeb/miPaginaweb/static/css/index_xs.css
@@ -1,3 +1,5 @@
+/* Hoja de Estilo CSS para dispositivos moviles (<420px) */
+
 @media screen and (max-width:420px) {
     /* Banner */
     .foto_cont {
