--- a/myProyectoPaginaWeb/miPaginaweb/static/css/index_md.css
+++ b/myProyectoPaginaWeb/miPaginaweb/static/css/index_md.css
@@ -2,16 +2,16 @@
 
 @media screen and (min-width:1024px) and (max-width:2000px) {
     /* Banner */
+    /* Contenedor del Banner */
     .foto_cont {
-        /* Contenedor del Banner */
         text-align: center;
         width: 100%;
         height: auto;
         background-image: url('../fotos/azul.jpg');
         background-size: 100% 100%;
     }
+    /* Banner */
     .main {
-        /* Banner */
         padding-top: 40px;
         display: block;
         position: relative;
@@ -20,8 +20,7 @@
     .titulo1 h1 {
         padding-top: 30px;
         font-family: 'Anton';
-        line-height: 1.1;
-        /* espacio enntre lineas */
+        line-height: 1.1; /* espacio enntre lineas */
         color: white;
         font-size: 400%;
     }
@@ -53,10 +52,12 @@
         background-color: beige;
     }
     /* Precios */
+    /* Columnas */
     .container #col {
         outline: 5px auto black;
         margin-inline: 20px;
     }
+    /* Contenedor de Columnas */
     .container {
         display: flex;
         flex-wrap: wrap;
@@ -66,6 +67,7 @@
         font-family: 'Poppins';
         margin: 40px;
     }
+    /* Imagen de los Precios */
     .container img {
         border-radius: 50%;
     }
@@ -83,6 +85,7 @@
         text-align: center;
         font-family: 'Poppins';
     }
+    /* Contenedor de segundo Slider */
     .containerSlider2 {
         background-color: white;
         display: flex;
@@ -96,6 +99,7 @@
         font-size: 30px;
         font-family: 'Poppins';
     }
+    /* Imagenes de segundo Slider */
     .containerSlider2 img {
         display: flex;
         left: 25%;
